noinst_LTLIBRARIES = libjabberdbase.la

libjabberdbase_la_SOURCES = base_accept.c base_dir.c base_dynamic.c base_file.c base_stderr.c base_to.c base_connect.c base_exec.c base_format.c base_stdout.c base_syslog.c base_unsubscribe.c
libjabberdbase_la_LDFLAGS = @LDFLAGS@ @VERSION_INFO@
INCLUDES = -I.. -I../lib
