noinst_LTLIBRARIES = libjabberdsmmods.la

libjabberdsmmods_la_SOURCES = mod_admin.cc mod_agents.cc mod_announce.cc mod_auth_crypt.cc mod_auth_digest.cc mod_auth_plain.cc mod_browse.cc mod_disco.cc mod_echo.cc mod_example.cc mod_last.cc mod_log.cc mod_offline.cc mod_presence.cc mod_privacy.cc mod_register.cc mod_roster.cc mod_ping.cc mod_stat.cc mod_time.cc mod_useridpolicy.cc mod_vcard.cc mod_version.cc mod_xml.cc
libjabberdsmmods_la_LIBADD = -lexpat
libjabberdsmmods_la_LDFLAGS = @LDFLAGS@
INCLUDES = -I../../jabberd -I../../jabberd/lib -I..
