noinst_LTLIBRARIES = libjabberdbase.la

libjabberdbase_la_SOURCES = base.c base_accept.c base_dir.c base_file.c base_importspool.c base_load.c base_null.c base_stderr.c base_to.c base_connect.c base_format.c base_stdout.c base_syslog.c base_unsubscribe.c
libjabberdbase_la_LDFLAGS = @LDFLAGS@
INCLUDES = -I.. -I../lib
