noinst_LTLIBRARIES = libjabberdbase.la

libjabberdbase_la_SOURCES = base.cc base_accept.cc base_dir.cc base_file.cc base_importspool.cc base_load.cc base_null.cc base_stderr.cc base_to.cc base_connect.cc base_format.cc base_stdout.cc base_syslog.cc base_unsubscribe.cc
libjabberdbase_la_LDFLAGS = @LDFLAGS@
INCLUDES = -I.. -I../lib
