INCLUDES = -DXML_MIN_SIZE

noinst_LTLIBRARIES = libxmlparse.la

noinst_HEADERS = asciitab.h hashtable.h iasciitab.h latin1tab.h nametab.h utf8tab.h xmldef.h xmlparse.h xmlrole.h xmltok.h xmltok_impl.h xmltok_impl.c xmltok_ns.c

libxmlparse_la_SOURCES = hashtable.c xmlparse.c xmlrole.c xmltok.c
libxmlparse_la_LIBADD = @LDFLAGS@
